--- a/front/public/index.html
+++ b/front/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Моя страничка Для 5 коммита</title>
+    <title>Моя страничка Для онлайн коммита</title>
 </head>
 <body>
 <div id="root"></div>
