--- a/front/public/index.html
+++ b/front/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Моя страничка Для онлайн коммита</title>
+    <title>Моя страничка</title>
 </head>
 <body>
+
 <div id="root"></div>
 </body>
 </html>
